fetch and use  incorrectly in callback

--- a/client/ns-dev-day/app/app.scss
+++ b/client/ns-dev-day/app/app.scss
@@ -44,9 +44,11 @@
 .countdown-widget {
     vertical-align: top;
     horizontal-align: center;
+    text-align: center;
     font-size: 35;
     color: $night-dark;
     margin-top: 30%;
+    width: 80%;
     border-color: blueviolet;
     border-radius: 15;
     border-width: 3
