fix time conversion when calculating session length
add loading indicators in the pages that tend to load slower

--- a/client/ns-dev-day/app/app.scss
+++ b/client/ns-dev-day/app/app.scss
@@ -193,3 +193,12 @@ ActionBar .action-bar-title {
         line-height: 4;
     }
 }
+
+.dimmer {
+    background-color: rgba(111, 111, 111, 0.5)
+}
+
+ActivityIndicator {
+    height: 50%;
+    width: 50%;
+}
